Hopefully finally fixed problems with the homepage on mobile devices.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,7 @@ body::-webkit-scrollbar-thumb {
 body {
     font-family: "system", "Roboto";
     transition: 0.2s;
+    padding-bottom: 100px;
 }
 
 .about-me {
@@ -213,6 +214,12 @@ body {
 }
 
 @media only screen and (max-width: 1030px) {
+    .post-title {
+        font-size: 30px;
+    }
+    .about-me-title {
+        font-size: 30px;
+    }
     .bottom-icons {
         justify-content: center;
         align-items: center;
